test-crates/duchess-java-tests/tests/ui/native_fn_return_fresh_java_string.stderr
error[E0308]: mismatched types
   --> $DIR/native_fn_return_fresh_java_string.rs:19:5
    |
19  |     java::lang::String::new(v.to_java()).execute()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
    |
    = note: expected struct `Local<'jvm, _>`
               found struct `Local<'_, _>`
note: the lifetime requirement is introduced here
   --> /home/nmatsakis/versioned/duchess/src/jvm.rs:108:31
    |
108 |         for<'jvm> Self: JvmOp<Output<'jvm> = R>,
    |                               ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
